--- a/Tadashi_Refs.bib
+++ b/Tadashi_Refs.bib
@@ -7,6 +7,44 @@
   organization={IEEE}
 }
 
+@article{Bohr1913,
+author = {N. Bohr},
+title = {I. On the constitution of atoms and molecules},
+journal = {Philos. Mag.},
+volume = {26},
+number = {151},
+pages = {1-25},
+year  = {1913},
+publisher = {Taylor & Francis},
+doi = {10.1080/14786441308634955},
+URL = {https://doi.org/10.1080/14786441308634955},
+eprint = {https://doi.org/10.1080/14786441308634955}
+}
+
+@Article{Lindhard1964,
+	author = 	 {J. Lindhard and Aage Winther},
+	title = 	 {Stopping Power of Electron Gas and Equipartition Rule},
+	journal =  {Mat. Fys. Medd. Dan. Vid. Selsk.},
+	year = 	 {1964},
+	volume = 	 {34},
+	number = 	 {4},
+	pages = 	 {1--24},
+	url =    {http://www.sdu.dk/media/bibpdf/Bind%2030-39%5CBind%5Cmfm-34-4.pdf}
+}
+
+@article{Caro2015,
+  doi = {10.1103/physrevb.92.144309},
+  url = {https://doi.org/10.1103/physrevb.92.144309},
+  year = {2015},
+  month = oct,
+  publisher = {American Physical Society ({APS})},
+  volume = {92},
+  number = {14},
+  author = {A. Caro and A. A. Correa and A. Tamm and G. D. Samolyuk and G. M. Stocks},
+  title = {Adequacy of damped dynamics to represent the electron-phonon interaction in solids},
+  journal = {Physical Review B}
+}
+
 @article{CarterEdwards2014,
   title = "Kokkos: Enabling manycore performance portability through polymorphic memory access patterns ",
   journal = "J. Parallel Distrib. Comput.",
@@ -18,6 +56,46 @@
   doi = "https://doi.org/10.1016/j.jpdc.2014.07.003",
   url = "http://www.sciencedirect.com/science/article/pii/S0743731514001257",
   author = "H. Carter Edwards and Christian R. Trott and Daniel Sunderland"
+}
+
+@article{Thomson1912,
+	author = {Thomson, J. J.},
+	title = {XLII. Ionization by moving electrified particles},
+	journal = {Philos. Mag.},
+	volume = {23},
+	number = {136},
+	pages = {449-457},
+	year  = {1912},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/14786440408637241},
+	URL = {http://dx.doi.org/10.1080/14786440408637241},
+	eprint = {http://dx.doi.org/10.1080/14786440408637241}
+}
+
+@article{Quashie2020,
+  doi = {10.1016/j.actamat.2020.06.061},
+  url = {https://doi.org/10.1016/j.actamat.2020.06.061},
+  year = {2020},
+  month = sep,
+  publisher = {Elsevier {BV}},
+  volume = {196},
+  pages = {576--583},
+  author = {Edwin E. Quashie and Rafi Ullah and Xavier Andrade and Alfredo A. Correa},
+  title = {Effect of chemical disorder on the electronic stopping of solid solution alloys},
+  journal = {Acta Materialia}
+}
+
+@article{Caro2015,
+  doi = {10.1103/physrevb.92.144309},
+  url = {https://doi.org/10.1103/physrevb.92.144309},
+  year = {2015},
+  month = oct,
+  publisher = {American Physical Society ({APS})},
+  volume = {92},
+  number = {14},
+  author = {A. Caro and A. A. Correa and A. Tamm and G. D. Samolyuk and G. M. Stocks},
+  title = {Adequacy of damped dynamics to represent the electron-phonon interaction in solids},
+  journal = {Physical Review B}
 }
 
 @INPROCEEDINGS{Potluri2013,
