--- a/research.tex
+++ b/research.tex
@@ -208,9 +208,7 @@ Additionally, the inclusion of external magnetic fields will allow for the simul
 Solving for these spin-waves will be done in large unit cells using an effective spin Hamiltonian consisting of Zeeman effects, exchange interactions and magnetic
 anisotropies. 
 
-\subsection{Collaborative science}
-
-\textcolor{red}{Descriptions of type-A projects.}
+\subsection{Collaborative science}\label{sec:collaborative}
 
 \subsubsection{Role of nonequilibrium spin-phonon coupling in enhancing bulk photovoltaic effect}\label{sec:BPVE}
 
@@ -325,7 +323,7 @@ Spin-orbit coupling for dynamics (Task 1.3)
 \paragraph{Beyond Ehrenfest dynamics} 
 Mention: Electron-phonon development from stopping power.  Figure.
 
-\paragraph{Interfacing \textsc{inq} with Tight-Binding codes}
+\paragraph{Interfacing \textsc{inq} with Tight-Binding codes}\label{sec:future-tb}
 
 We plan to use \textsc{inq} in combination with our tight-binding dynamics code (Section.~\ref{sec:tight-binding}) for parameter extraction and for identification of the relevant degrees of freedom to be retained in these downfolded models. 
 Having a well-defined interface for these tasks will accelerate projects of the sort described in Sections~\ref{sec:BPVE},~\ref{sec:tight-binding}. Dynamical Wannierization along TDDFT trajectories will provide Hamiltonian matrix elements for the construction of these models, generalizing an approach previously taken for Wannierization along classical MD trajectories~\cite{Abramovitch2021}. 
