Added text to future work...references still need to go in.

--- a/research.tex
+++ b/research.tex
@@ -261,13 +261,14 @@ Our work paves the way for further exploration and ultimately directed manipulat
 
 \section{Future Work}
 
-\subsection{Code developments}
-Having validated the modern C++ based design and functionality of \textsc{INQ} and demonstrated parallelism over hybrid i 
+\subsection{Software development}
+Having validated the modern C++ based design and infrastructural aspects of \textsc{INQ} and demonstrated parallelism over hybrid CPU-GPU architectures, during the next phase of the project we aim to add functionality to the DFT/TDDFT application layer of  \textsc{INQ} with the goal of tackling emerging ultrafast materials science problems. Additionally, to enable low cost simulations of very large system sizes accessible via tight-binding models, we plan to implement tools for automated extraction of model parameters based on real-time TDDFT simulations. This latter functionality will be developed at LBNL and interfaced with TB codes for dynamics simulations.
+
 \subsubsection{Functionality additions to INQ}
 
-\paragraph{Exact exchange and Axc}
+\paragraph{Beyond adiabatic semi-local XC functionals:}  Recent developments within TDDFT have enabled accurate simulations of excitonic and long-range charge transfer phenomena in condensed matter systems within the framework of generalized Kohn-Sham (GKS) TDDFT and current-DFT (CDFT).  GKS theory relaxes the requirement within KS theory that the XC potential be a local multiplicative potential of the form $V_{XC}[n](\textbf{r})$ and instead allows non-local potentials $V_{XC}[\rho](\textbf{r},\textbf{r'} )$ that are often explicit functionals of the GKS one-body density matrix $\rho(\textbf{r},\textbf{r'})$. Current-DFT  based approaches meanwhile allow for the  encoding of excitonic effects within a time-dependent XC vector potential $A_{XC}[\textbf{j},n](r,t)$, in principle, a functional of both the density $n(\textbf{r})$ and current-density~$\textbf{j}(\textbf{r})$. Both approaches are promising for  modeling excitonic effects in  functional materials such a transition metal oxides, chalcogenides and hybrid perovskite systems at a cost that is significantly lower than solving the Bethe-Salpeter Equation. GKS theory based RT-TDDFT in particular extends to nonlinear and non-perturbative light matter interactions as has been demonstrated recently in the case of pump-probe spectroscopy simulated within excitonic condensed matter systems. One of the main development goals for the NPNEQ team over the next 18 months is therefore to implement beyond semi-local DFT XC functionals within $\textsc{INQ}$.  In this endeavor we will draw on our previous experience implementing hybrid functionals within Quantum Espresso (\textbf{PI Prendergast}), SIESTA (\textbf{PI Pemmaraju}) and Octopus (\textbf{PI Andrade}) while exploring the GPU adaptation within \textsc{INQ} of promising new algorithms such as the  Adaptively Compressed Exchange (ACE) low-rank representation of the Fock operator due to Lin et al.   
 
-Nonlocal functionals for Generalized Kohn-Sham (GKS) RT-TDDFT (Task 1.1)
+%Nonlocal functionals for Generalized Kohn-Sham (GKS) RT-TDDFT (Task 1.1)
 % The need for more accurate descriptions of the electron density and its polarization response to perturbations across length scales is critical for real-time explorations of ultrafast dynamics. Field-driven excitations relevant to optical transitions require accurate band gaps and excited state evolution113, 116, 118. The potential to form self-trapped excited states, through electron-nuclear interactions, such as exciton-polaritons, places stringent accuracy requirements on exactly those areas where traditional (semi-)local exchange-correlation functionals fail due to significant self-interaction errors that limit or prevent electronic localization and the associated symmetry-breaking forces on local regions of the ionic lattice/nuclear coordinates112, 116, 144. 
 % Nonlocal functionals featuring a fraction of Fock exchange provide one solution to this problem, generally reducing self-interaction, increasing bandwidth in the electronic DOS and reducing polarizabilities to values closer to experimental estimates118, 119. However, evaluation of the Fock operator within the exact-exchange formalism presents significant computational overhead for static calculations and can render time-dependent studies intractable. Such calculations, within a plane-wave basis (as proposed in this effort) present costs that scale as Ng log(Ng) Ne2, where Ng, the number of plane-wave basis functions can easily approach millions for large system sizes, even if the number of electrons, Ne, is only in the thousands. In partnership with NERSC, PI Prendergast recently succeeded in providing order of magnitude speed-up within the hybrid exact-exchange implementation for the open-source code, PWscf (part of the QuantumESPRESSO suite145) through (1) reorganization of the data layout when switching between the external local DFT self-consistent field loop and an internal non-local Fock matrix evaluation loop and (2) parallelization of the Fock matrix evaluation via band pairing146. These changes have been implemented within PWscf since version 6.1 of QuantumESPRESSO and recent applications include studies of transition metal oxides: variations in electronic DOS upon lithiation147 and significant improvements in transition state energetics for lithium ion transport148. 
 % Furthermore, for large scale plane-wave applications, we will require convergent approximations to the Fock operator with further reductions in computational overhead, such as the Adaptively Compressed Exchange (ACE) approach of Lin149. In this development, the full exchange operator is replaced with a lower rank (Ne vs. Ng) approximant with convergence constraints. This has also been implemented with QuantumESPRESSO (since version 6.1) and another plane-wave implementation in the Discontinuous Galerkin DFT code (DGDFT150) and has been applied in benchmark studies of bulk silicon supercells and to the study of water adsorption on silicene151. ACE contrasts with previous efforts to exploit the locality of exchange interactions through transformations of the occupied Kohn-Sham orbital subspace to a basis of localized functions, such as maximally-localized Wannier functions (as developed by Car et al. 152 in the CP code within QuantumESPRESSO) or via recursive subspace bisection (as developed by Gygi et al. 153 in the Qbox code).
@@ -275,8 +276,11 @@ Nonlocal functionals for Generalized Kohn-Sham (GKS) RT-TDDFT (Task 1.1)
 % (Task 1.1) In view of the above, the NPNEQ team will develop GKS RT-TDDFT functionality featuring range-separated hybrid XC functionals by leveraging  algorithms such as PT-ACE within the scalable Qbox framework.  
 
 
-\paragraph{Non-collinear magnetism and spin-orbit}
-Spin-orbit coupling for dynamics (Task 1.3)
+\paragraph{Non-collinear magnetism and spin-orbit Coupling} Time-dependent DFT for magnetic systems is intrinsically a theory of noncollinear spins wherein the XC magnetic field couples to Pauli two component spinors in the KS Hamiltonian. Furthermore, in the context of modern condensed matter applications such as laser induced magnetization dynamics, carrier dynamics in hybrid perovskite systems and the nonlinear response of topological materials spin-orbit coupling plays a critical role. We will therefore extend the RT-TDDFT time propagation functionality in \textsc{INQ} to the Breit-Pauli Hamiltonian in the two component spinor algebra in order to provide a fully generic description of SO coupling with out projective approximations that depend on ionic positions. In particular we will implement the TDDFT equivalent of the Breit-Pauli Hamiltonian due to Krieger \textit{et al} 
+\begin{equation*}
+i\frac{\partial\Psi_i(\textbf{r},t)}{\partial t} = [ \frac{1}{2} ( -i\nabla + \frac{1}{c}\textbf{A}_{ext} (t) )  + v_s(\textbf{r},t)  + \frac{1}{2c} \overrightarrow{\sigma}.\textbf{B}(\textbf{r},t)  + \frac{1}{4c^2}\overrightarrow{\sigma}.(\nabla v_s(\textbf{r},t) \times -i\nabla )] \Psi_i(\textbf{r},t)
+\end{equation*}
+in which the last term indicates the SO coupling. The generic formulation we propose to implement is well suited to studying the coupled dynamics of charge-spin-orbital-lattice degrees of freedom in the non-perturbative regime.  
  
 % In time-independent problems the description of spin-orbit coupling is necessary to reproduce accurate atomic energies and level splitting. In thermal equilibrium the spin state and the existence of magnetism is determined by free energy minimization. In time-dependent problems the situation is more complicated, since the only way to change the spin state is by an external magnetic field or internally by spin-orbit coupling. Processes like ultrafast demagnetization can be phenomenologically explained by models that assume kinetics upon free energy models 162 but a practical microscopic model is still absent.
 % Specifically, we will implement spin-orbit coupling (SOC) dynamics, which will significantly improve fidelity of quantum dynamics simulations of functional materials that often comprise transition metals and exhibit complex magnetism. Our implementation of SOC for the planewave basis will not use the projection approximation that virtually all the currently existing (TD)DFT software relies on; as it has been shown to be inappropriate for a description of time dependent quantum mechanical evolution 163.
@@ -287,8 +291,8 @@ Spin-orbit coupling for dynamics (Task 1.3)
 % where  is the gradient (force) of the nuclear potential. This part of the Hamiltonian contains two-body terms that are unacceptable in the Kohn-Sham theory, therefore we will use the gradient of self-consistent effective potential as presented by Krieger et al.
 % This representation of the SO is independent on the labeling of ions and not-explicitly dependent on the ion positions (only through the potential); it doesn’t rely on a local projection of the angular momentum and it is more suitable for a time dependent treatment with co-evolving ions. In the same way that a quantum ion-electron interaction leads to advanced picture of electron-phonon coupling (a two-temperature system),128 this development will lead to a fuller picture to guide advances of effective models of spin-lattice-electron dynamics166. This is important, in particular, to handle time evolution of Weyl points driven by lattice motion or circularly polarized light, addressing the needs for modeling experimental efforts described in other sections. 
 
-\paragraph{Spiral boundary conditions}
-
+\paragraph{Spiral boundary conditions:}
+Understanding the role of spin-fluctuations both thermal and light driven, is a topic of increasing interest in materials science. With advances in the ability to experimentally probe magnon spectra using inelastic X-ray spectroscopy, the potential for nonlinear manipulation on spin excitations in the THz regime and the emergence of anti-ferromagnetic spintronics, there is a growing demand for ab initio theoretical simulations in this area. Describing magnon excitations at finite wave-vectors requires either the use of large supercells or alternatively twisted boundary conditions with the generalized Bloch framework. The latter approach is particularly attractive for time-domain non-perturbative simulations of magnons in periodic systems as has been recently demonstrated. Within the group of PI Lindenberg at SLAC, there is on going and planned experimental activity investigating spin dynamics in layered antiferromagnets as outlined in the next section. In order to make direct contact with these experimental studies we will implement within \textsc{INQ} the time-dependent version of the general Bloch theorem of Sandratskii recently outlined by N. Tancogne-Dejean et al. 
 \paragraph{Beyond Ehrenfest dynamics} 
 Mention: Electron-phonon development from stopping power.  Figure.
 
